--- a/album.html
+++ b/album.html
@@ -19,6 +19,7 @@
                 <a href="collection.html" class="navbar-link">collection</a>
             </div>
         </nav>
+
           <main class="album-view container narrow">
             <section class="clearfix">
               <div class="column half">
@@ -34,6 +35,7 @@
 
             </table>
       </main>
+
           <section class="player-bar">
              <div class="container">
                 <div class="control-group main-controls">
@@ -48,7 +50,9 @@
                     </a>
                 </div>
                 <div class="control-group currently-playing">
-                     <h2 class="song-name">My dumb song</h2>
+                     <h2 class="song-name"></h2>
+                     <h2 class="artist-song-mobile"></h2>
+                     <h3 class="artist-name"></h3>
                      <div class="seek-control">
                        <div class="seek-bar">
                            <div class="fill"></div>
@@ -57,18 +61,18 @@
                        <div class="current-time">2:30</div>
                        <div class="total-time">4:45</div>
                    </div>
-                     <h2 class="artist-song-mobile">My dumb song - Fallout Boy</h2>
-                     <h3 class="artist-name">Fallout Boy</h3>
                 </div>
                 <div class="control-group volume">
                      <span class="ion-volume-high icon"></span>
-                     <div class="seek-bar">
+                      <div class="seek-bar">
                          <div class="fill"></div>
                          <div class="thumb"></div>
                      </div>
                 </div>
              </div>
           </section>
-      <script src="scripts/album.js"></script>
+           <script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
+           <script src="scripts/fixtures.js"></script>
+           <script src="scripts/album.js"></script>
     </body>
 </html>
